  - Unmake TownySettings.isUsingEconomy also require that teh TownyEconomyHandler.isActive(), because we use isUsingEconomy to decide if we startup the economy handler (derp).
  - Fix TownySQLSource#backup() being synchronized.
0.96.2.15:
  - Remove assistants column from nation table on mysql DBs.
  - Improve error messages on loading towns/nations for mysql.
  - Handle nations loading invalid capital. 
0.96.2.16:
  - Hotfix: Make deletions and other IO operations go through the async queue, courtesy of Siris with PR #4288.
  - Fix towns-paying-tax message in the new day not appearing for the town.
  - Add debug messaging when nations load/set a capital.
  - Fix nations selecting a new capital on startup.
0.96.2.17: 
  - Re-activate the world files unclaimedZoneIgnoredIDs list.
    - This was only being used for wilds plots, and not having any effect on the wilderness.
  - New Permission Nodes:
    - towny.admin.spawn.nocharge - makes spawning cost 0.
    - towny.admin.spawn.nocooldown - removes cooldown from spawning.
    - towny.admin.spawn.nowarmup - removes warmup from spawning.
    - All three are child nodes of towny.admin.spawn
    - Closes #4296.
  - Fix permissions not being give to members who've just joined a town.
  - API Change: TownPreClaimEvent has new isOutpost() and isHomeBlock() methods.
  - Fix upgrading from versions with added text in version causing issues with config migration, courtesy of Siris with PR #4282.
0.96.2.18:
  - Added NETHER_PORTAL to new_world_settings.plot_management.revert_on_unclaim.block_ignore.
    - Closes #4305.
  - Cleaned up config comments, fixed white-spacing. Should be much more readable.
  - Fix ConfigMigrator not migrating worldActions onto existing world settings.
  - Add Hyperverse to plugin.yml's soft-depend.
  - Further improve config comments.
  - Add fire and air to the list of blocks Towny will not try an explosion regen task on.
    - Improves but doesn't completely solve #4306.